--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
+*.vscode/*
+*.vscode/
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -29,6 +32,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
+.angular
 /.angular/cache
 .sass-cache/
 /connect.lock
