--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,15 +18,20 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
+    "lib": ["ES2022", "dom"],
+    "plugins": [
+      {
+        "name": "@angular/language-service"
+      }
     ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "disableTypeScriptVersionCheck": true,
+    "preserveWhiteSpaces": false,
+    "_enabledBlockTypes": ["if", "switch", "for"]
   }
 }
